--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "gh-pages": "^2.0.1",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "predeploy": "npm run build",
